[project]
name = "six2one"
version = "0.1.0"
description = ""
authors = [
    {name = "Nolla Fox",email = "nollafox.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp (>=3.13.5,<4.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "tqdm (>=4.67.3,<5.0.0)"
]


[project.scripts]
621 = "six2one.cli:sync_main"
926 = "six2one.cli:sync_main"


[tool.poetry]
packages = [{include = "six2one"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
